--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             <ul class="task">
               <li>
                 <span>task 1</span>
-                <i class="bi bi-trash-fill"></i>
+                <i class="bi bi-trash-fill delete"></i>
               </li>
               <li>
                 <span>task 2</span>
-                <i class="bi bi-trash-fill"></i>
+                <i class="bi bi-trash-fill delete"></i>
               </li>
               <li>
                 <span>task 3</span>
-                <i class="bi bi-trash-fill"></i>
+                <i class="bi bi-trash-fill delete"></i>
               </li>
             </ul>
             <form class="add">
