--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <section class="task-manager">
           <div class="search-box">
-            <form class="search">
+            <form class="search" method="POST" netlify>
               <input
                 type="text"
                 name="task"
@@ -47,7 +47,7 @@
                 <i class="bi bi-trash-fill delete"></i>
               </li>
             </ul>
-            <form class="add">
+            <form class="add" method="POST" netlify>
               <input
                 type="text"
                 name="task"
