--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
           <div class="message-box">
             <span>you have 3 pending tasks</span>
-            <button type="reset">clear all</button>
+            <button type="reset" class="clear">clear all</button>
           </div>
         </section>
       </div>
