--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
       <div class="wrapper">
         <section class="heading">
-          <p class="title">notNotion</p>
+          <p class="title">nwabuezestudios</p>
           <p class="sub-title">
             Manage And Search Your Pending Tasks In Clicks!
           </p>
@@ -38,14 +38,6 @@
                 <span>task 1</span>
                 <i class="bi bi-trash-fill delete"></i>
               </li>
-              <li>
-                <span>task 2</span>
-                <i class="bi bi-trash-fill delete"></i>
-              </li>
-              <li>
-                <span>task 3</span>
-                <i class="bi bi-trash-fill delete"></i>
-              </li>
             </ul>
             <form class="add" method="POST" netlify>
               <input
@@ -59,7 +51,7 @@
             </form>
           </div>
           <div class="message-box">
-            <span>you have 3 pending tasks</span>
+            <span></span>
             <button type="reset" class="clear">clear all</button>
           </div>
         </section>
